--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "NuCamp Portfolio Project by Julio Alcantara",
   "main": "index.js",
   "scripts": {
+    "lite": "lite-server",
     "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,7 +26,10 @@
   "homepage": "https://github.com/Jalcantara88/portfolioProject#readme",
   "dependencies": {
     "bootstrap": "^4.5.3",
+    "bootstrap-social": "^5.1.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "lite-server": "^2.6.1",
     "popper": "^1.0.1"
   }
 }
