--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "mdbootstrap": "^4.19.2",
     "popper": "^1.0.1",
     "sass": "^1.29.0"
   },
